<resources>
    <string name="app_name">Linterna</string>

    <string name="otras_apps">Otras Aplicaciones</string>
    <string name="salir">Salir</string>


    <string name="interstitial_ad_sample">Anuncio a Pantalla Completa</string>
    <string name="start_level">Nivel 1</string>
    <string name="next_level">Siguiente Artículo</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638

    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
     -->
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-8829538089345362/6880082911</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8829538089345362/1553402917</string>

    <string name="linterna">Linterna</string>
    <string name="OnOff">ON / OFF</string>
    <string name="pulsaste">Pulsaste ON / OFF </string>
    <string name="AdError">Error, Anuncio no cargado</string>
    <string name="Level">Nivel </string>
</resources>
